trunk/Archive2/c9/bc4128527137a3/output
main.cpp:1:1: error: unknown type name 'INPUT'
INPUT:
^
main.cpp:1:6: error: expected unqualified-id
INPUT:
     ^
main.cpp:16:1: error: C++ requires a type specifier for all declarations
assert(p == node2);
^~~~~~
main.cpp:16:8: error: use of undeclared identifier 'p'
assert(p == node2);
       ^
main.cpp:16:13: error: use of undeclared identifier 'node2'
assert(p == node2);
            ^
main.cpp:17:1: error: C++ requires a type specifier for all declarations
assert(p->val == "abc");
^~~~~~
main.cpp:17:8: error: use of undeclared identifier 'p'
assert(p->val == "abc");
       ^
main.cpp:18:1: error: C++ requires a type specifier for all declarations
assert(p->next == node1);
^~~~~~
main.cpp:18:8: error: use of undeclared identifier 'p'
assert(p->next == node1);
       ^
main.cpp:18:19: error: use of undeclared identifier 'node1'
assert(p->next == node1);
                  ^
main.cpp:19:1: error: C++ requires a type specifier for all declarations
assert(p->next->val == "def");
^~~~~~
main.cpp:19:8: error: use of undeclared identifier 'p'
assert(p->next->val == "def");
       ^
main.cpp:20:1: error: C++ requires a type specifier for all declarations
assert(p->next->next == NULL);
^~~~~~
main.cpp:20:8: error: use of undeclared identifier 'p'
assert(p->next->next == NULL);
       ^
main.cpp:20:25: error: use of undeclared identifier 'NULL'
assert(p->next->next == NULL);
                        ^
15 errors generated.
